--- a/customers/src/main/resources/application.properties
+++ b/customers/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+server.port=8080
+spring.application.name=customers
+management.endpoints.web.exposure.include=*
+management.endpoint.health.probes.enabled=true
+management.endpoint.health.show-details=always
+management.health.probes.enabled=true
