--- a/customers/src/main/resources/application.properties
+++ b/customers/src/main/resources/application.properties
@@ -5,3 +5,5 @@ management.endpoint.health.probes.enabled=true
 management.endpoint.health.show-details=always
 spring.lifecycle.timeout-per-shutdown-phase=30s
 server.shutdown=graceful
+management.health.livenessstate.enabled=true
+management.health.readinessstate.enabled=true
