--- a/customers/pom.xml
+++ b/customers/pom.xml
@@ -16,8 +16,7 @@
     <description>Demo project for Spring Boot</description>
     <properties>
         <java.version>11</java.version>
-        <spring-cloud.version>2020.0.1</spring-cloud.version>
-        <wavefront.version>2.1.0</wavefront.version>
+<!--        <wavefront.version>2.1.0</wavefront.version>-->
     </properties>
     <dependencies>
 
@@ -34,14 +33,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-webflux</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-sleuth</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.wavefront</groupId>
-            <artifactId>wavefront-spring-boot-starter</artifactId>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.wavefront</groupId>-->
+<!--            <artifactId>wavefront-spring-boot-starter</artifactId>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>io.r2dbc</groupId>
             <artifactId>r2dbc-h2</artifactId>
@@ -73,24 +68,17 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-dependencies</artifactId>
-                <version>${spring-cloud.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-            <dependency>
-                <groupId>com.wavefront</groupId>
-                <artifactId>wavefront-spring-boot-bom</artifactId>
-                <version>${wavefront.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
+<!--    <dependencyManagement>-->
+<!--        <dependencies>-->
+<!--            <dependency>-->
+<!--                <groupId>com.wavefront</groupId>-->
+<!--                <artifactId>wavefront-spring-boot-bom</artifactId>-->
+<!--                <version>${wavefront.version}</version>-->
+<!--                <type>pom</type>-->
+<!--                <scope>import</scope>-->
+<!--            </dependency>-->
+<!--        </dependencies>-->
+<!--    </dependencyManagement>-->
     <repositories>
         <repository>
             <id>spring-milestone</id>
@@ -107,10 +95,10 @@
     </pluginRepositories>
     <build>
         <plugins>
-            <plugin>
-                <groupId>pl.project13.maven</groupId>
-                <artifactId>git-commit-id-plugin</artifactId>
-            </plugin>
+<!--            <plugin>-->
+<!--                <groupId>pl.project13.maven</groupId>-->
+<!--                <artifactId>git-commit-id-plugin</artifactId>-->
+<!--            </plugin>-->
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
@@ -118,6 +106,9 @@
                     <image>
                         <builder>paketobuildpacks/builder:tiny</builder>
                         <env>
+<!--                            <BP_BOOT_NATIVE_IMAGE_BUILD_ARGUMENTS>-->
+<!--                                &#45;&#45;enable-url-protocols=https-->
+<!--                            </BP_BOOT_NATIVE_IMAGE_BUILD_ARGUMENTS>-->
                             <BP_BOOT_NATIVE_IMAGE>true</BP_BOOT_NATIVE_IMAGE>
                         </env>
                     </image>
