--- a/customers/src/main/resources/application.properties
+++ b/customers/src/main/resources/application.properties
@@ -1,7 +1,12 @@
 server.port=8080
 spring.application.name=customers
+
 #management.endpoints.web.exposure.include=*
+
 #management.endpoint.health.show-details=always
 #management.endpoint.health.probes.enabled=true
+
 #spring.lifecycle.timeout-per-shutdown-phase=30s
 #server.shutdown=graceful
+
+#info.foo=bar
