--- a/customers/src/main/resources/application.properties
+++ b/customers/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.lifecycle.timeout-per-shutdown-phase=30s
 server.shutdown=graceful
 management.health.livenessstate.enabled=true
 management.health.readinessstate.enabled=true
+
+management.metrics.export.wavefront.api-token=cc3da5d0-83e7-4e4d-8528-b4024e2365b3
+management.metrics.export.wavefront.uri=https://wavefront.surf
